--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">test2016110103</string>
+    <string-array name="drinks">
+        <item>可樂</item>
+        <item>汽水</item>
+        <item>紅茶</item>
+        <item>果汁</item>
+    </string-array>
 </resources>
